force-app/main/default/objects/Schedule__c/fields/RT_Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>RT_Schedule_ID__c</fullName>
    <externalId>true</externalId>
    <label>RT Schedule ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>