force-app/main/default/objects/Schedule__c/fields/scheduleType__c.field-meta.xml
<CustomField>
    <fullName>scheduleType__c</fullName>
    <description>Usage Type for this Schedule</description>
    <inlineHelpText>Select the appropriate usage type for this schedule</inlineHelpText>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audio</fullName>
                <default>true</default>
                <label>Audio</label>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Hosting</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>