force-app/main/default/objects/Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>description__c</columns>
    <columns>scheduleType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>